WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198582
TestWebKitAPI.WKWebView.LocalStorageProcessSuspends is flaky on release builds
https://bugs.webkit.org/show_bug.cgi?id=198582
Summary
TestWebKitAPI.WKWebView.LocalStorageProcessSuspends is flaky on release builds
Sihui Liu
Reported
2019-06-05 14:56:54 PDT
Failed TestWebKitAPI.WKWebView.LocalStorageProcessSuspends _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. /Volumes/Data/slave/mojave-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/LocalStoragePersistence.mm:142 Expected equality of these values: @"value" Which is: "value" result Which is: "newValue"
Attachments
Patch
(1.25 KB, patch)
2019-06-05 14:58 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-06-05 14:58:32 PDT
Created
attachment 371440
[details]
Patch
WebKit Commit Bot
Comment 2
2019-06-05 16:05:57 PDT
Comment on
attachment 371440
[details]
Patch Clearing flags on attachment: 371440 Committed
r246132
: <
https://trac.webkit.org/changeset/246132
>
WebKit Commit Bot
Comment 3
2019-06-05 16:05:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-06-05 16:06:14 PDT
<
rdar://problem/51459712
>
Ryosuke Niwa
Comment 5
2019-06-06 13:56:28 PDT
Comment on
attachment 371440
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371440&action=review
> Source/WebKit/NetworkProcess/WebStorage/StorageManager.h:121 > - State m_state; > + State m_state { State::Running };
We don't enable a warning for uninitialized member variables!?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug