TestWebKitAPI.WKWebView.LocalStorageProcessSuspends is flaky on release builds https://bugs.webkit.org/show_bug.cgi?id=198582

Reviewed by Youenn Fablet.

Initialize the state of StorageManager.

* NetworkProcess/WebStorage/StorageManager.h:


Canonical link: https://commits.webkit.org/212588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246132 268f45cc-cd09-0410-ab3c-d52691b4dbfc